--- a/docs/styles.css
+++ b/docs/styles.css
@@ -377,88 +377,79 @@ nav {
 
 /* Experience Section */
 #experience {
-    padding: 60px 0;
-    background-color: #0e0233;
-}
-
-#experience h2 {
-    font-size: 36px;
-    margin-bottom: 40px;
+    background-color: #1e1e2d;
     color: #fff;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    text-align: center;
+    padding: 50px 0;
 }
 
 .experience-card {
-    background-color: #bdcdde;
+    background-color: #2c2c3e;
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    border-radius: 8px;
+    min-height: 350px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: transform 0.2s;
 }
 
 .experience-card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transform: scale(1.02);
 }
 
 .experience-icon {
     margin-bottom: 15px;
+    font-size: 2rem;
 }
 
-.experience-card h5 {
-    font-size: 20px;
-    margin-bottom: 10px;
-    font-weight: bold;
-    color: #333;
-    text-align: center;
+h5, h6 {
+    margin: 0;
+    color: #fff;
 }
 
-.experience-card h6 {
-    font-size: 18px;
-    margin-bottom: 10px;
-    font-weight: bold;
-    color: #333;
-    text-align: center;
-}
-
-.experience-card .text-muted {
-    color: #6c757d;
-    display: block;
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-.experience-card ul {
+ul {
     list-style: none;
-    padding-left: 0;
-    margin-bottom: 0;
+    padding: 0;
+    margin-top: 10px;
 }
 
-.experience-card ul li {
-    font-size: 16px;
-    margin-bottom: 10px;
-    color: #333;
+ul li {
+    margin-bottom: 8px;
+    color: #ccc;
 }
 
-.experience-card ul li::before {
-    content: "\f058"; /* Font Awesome check-circle icon */
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    margin-right: 8px;
-    color: #28a745; /* Green color for the icon */
+.text-muted {
+    color: #aaa !important;
 }
 
-.text-center .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
+@media (min-width: 768px) {
+    .col-md-6 {
+        display: flex;
+        justify-content: center;
+    }
+
+    .experience-card {
+        width: 90%;
+    }
 }
 
-.text-center .btn-primary:hover {
-    background-color: #0056b3;
-    border-color: #004085;
+@media (min-width: 992px) {
+    .row {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .col-md-6 {
+        flex: 0 0 45%;
+        max-width: 45%;
+    }
+
+    .experience-card {
+        min-height: 380px;
+    }
 }
+
 
 /* Projects Section */
 #projects {
